Remove all emojis from project files

--- a/notebooks/01-IBM_Quantum_Experience_Integration.ipynb
+++ b/notebooks/01-IBM_Quantum_Experience_Integration.ipynb
@@ -13,13 +13,13 @@
     "\n",
     "---\n",
     "\n",
-    "##  📚 Notebook Execution Order\n",
+    "##   Notebook Execution Order\n",
     "\n",
     "**This is Notebook #1 of 9** - START HERE\n",
     "\n",
     "Recommended execution order for Houdinis Framework notebooks:\n",
     "\n",
-    "1. ✅ **IBM_Quantum_Experience_Integration.ipynb** ← YOU ARE HERE\n",
+    "1.  **IBM_Quantum_Experience_Integration.ipynb** ← YOU ARE HERE\n",
     "2. **Shors_Algorithm_RSA_Exploitation.ipynb** - RSA factorization attacks\n",
     "3. **Grovers_Algorithm_Symmetric_Key_Attacks.ipynb** - Symmetric key attacks\n",
     "4. **Quantum_Network_Scanning.ipynb** - Network reconnaissance\n",
