--- a/notebooks/03-Grovers_Algorithm_Symmetric_Key_Attacks.ipynb
+++ b/notebooks/03-Grovers_Algorithm_Symmetric_Key_Attacks.ipynb
@@ -13,15 +13,15 @@
     "\n",
     "---\n",
     "\n",
-    "##  📚 Notebook Execution Order\n",
+    "##   Notebook Execution Order\n",
     "\n",
     "**This is Notebook #3 of 9**\n",
     "\n",
     "Recommended execution order:\n",
     "\n",
-    "1. **IBM_Quantum_Experience_Integration.ipynb** - Backend setup ✅\n",
-    "2. **Shors_Algorithm_RSA_Exploitation.ipynb** - RSA attacks ✅\n",
-    "3. ✅ **Grovers_Algorithm_Symmetric_Key_Attacks.ipynb** ← YOU ARE HERE\n",
+    "1. **IBM_Quantum_Experience_Integration.ipynb** - Backend setup \n",
+    "2. **Shors_Algorithm_RSA_Exploitation.ipynb** - RSA attacks \n",
+    "3.  **Grovers_Algorithm_Symmetric_Key_Attacks.ipynb** ← YOU ARE HERE\n",
     "4. **Quantum_Network_Scanning.ipynb**\n",
     "5. **Harvest_Now_Decrypt_Later_Attacks.ipynb**\n",
     "6. **Post_Quantum_Cryptography_Analysis.ipynb**\n",
