--- a/notebooks/04-Quantum_Network_Scanning.ipynb
+++ b/notebooks/04-Quantum_Network_Scanning.ipynb
@@ -13,16 +13,16 @@
     "\n",
     "---\n",
     "\n",
-    "##  📚 Notebook Execution Order\n",
+    "##   Notebook Execution Order\n",
     "\n",
     "**This is Notebook #4 of 9**\n",
     "\n",
     "Recommended execution order:\n",
     "\n",
-    "1. **IBM_Quantum_Experience_Integration.ipynb** ✅\n",
-    "2. **Shors_Algorithm_RSA_Exploitation.ipynb** ✅\n",
-    "3. **Grovers_Algorithm_Symmetric_Key_Attacks.ipynb** ✅\n",
-    "4. ✅ **Quantum_Network_Scanning.ipynb** ← YOU ARE HERE\n",
+    "1. **IBM_Quantum_Experience_Integration.ipynb** \n",
+    "2. **Shors_Algorithm_RSA_Exploitation.ipynb** \n",
+    "3. **Grovers_Algorithm_Symmetric_Key_Attacks.ipynb** \n",
+    "4.  **Quantum_Network_Scanning.ipynb** ← YOU ARE HERE\n",
     "5. **Harvest_Now_Decrypt_Later_Attacks.ipynb**\n",
     "6. **Post_Quantum_Cryptography_Analysis.ipynb**\n",
     "7. **Quantum_Machine_Learning_Cryptanalysis.ipynb**\n",
