--- a/notebooks/05-Harvest_Now_Decrypt_Later_Attacks.ipynb
+++ b/notebooks/05-Harvest_Now_Decrypt_Later_Attacks.ipynb
@@ -13,17 +13,17 @@
     "\n",
     "---\n",
     "\n",
-    "##  📚 Notebook Execution Order\n",
+    "##   Notebook Execution Order\n",
     "\n",
     "**This is Notebook #5 of 9**\n",
     "\n",
     "Recommended execution order:\n",
     "\n",
-    "1. **IBM_Quantum_Experience_Integration.ipynb** ✅\n",
-    "2. **Shors_Algorithm_RSA_Exploitation.ipynb** ✅\n",
-    "3. **Grovers_Algorithm_Symmetric_Key_Attacks.ipynb** ✅\n",
-    "4. **Quantum_Network_Scanning.ipynb** ✅\n",
-    "5. ✅ **Harvest_Now_Decrypt_Later_Attacks.ipynb** ← YOU ARE HERE\n",
+    "1. **IBM_Quantum_Experience_Integration.ipynb** \n",
+    "2. **Shors_Algorithm_RSA_Exploitation.ipynb** \n",
+    "3. **Grovers_Algorithm_Symmetric_Key_Attacks.ipynb** \n",
+    "4. **Quantum_Network_Scanning.ipynb** \n",
+    "5.  **Harvest_Now_Decrypt_Later_Attacks.ipynb** ← YOU ARE HERE\n",
     "6. **Post_Quantum_Cryptography_Analysis.ipynb**\n",
     "7. **Quantum_Machine_Learning_Cryptanalysis.ipynb**\n",
     "8. **Houdinis_Advanced_Features.ipynb**\n",
@@ -546,9 +546,9 @@
     "            # Check vulnerability to quantum attacks\n",
     "            if 'RSA' in cipher[1] or 'DH' in cipher[1] or 'ECDH' in cipher[1]:\n",
     "                print(f\"\\\\n  VULNERABLE to Harvest Now Decrypt Later!\")\n",
-    "                print(f\"   ⚠  Key exchange uses {cipher[1]}\")\n",
-    "                print(f\"   ⚠  Can be broken by Shor's algorithm\")\n",
-    "                print(f\"   ⚠  All traffic should be captured for future decryption\")\n",
+    "                print(f\"     Key exchange uses {cipher[1]}\")\n",
+    "                print(f\"     Can be broken by Shor's algorithm\")\n",
+    "                print(f\"     All traffic should be captured for future decryption\")\n",
     "            \n",
     "            print(f\"\\\\n [Step 2] Simulating traffic interception...\")\n",
     "            print(f\"   • Intercepting TLS handshakes\")\n",
@@ -658,9 +658,9 @@
     "    \n",
     "    if 'rsa' in remote_key.get_name().lower():\n",
     "        print(f\"\\\\n  VULNERABLE to HNDL Attack!\")\n",
-    "        print(f\"   ⚠  RSA key exchange\")\n",
-    "        print(f\"   ⚠  Breakable with Shor's algorithm\")\n",
-    "        print(f\"   ⚠  Timeline:\")\n",
+    "        print(f\"     RSA key exchange\")\n",
+    "        print(f\"     Breakable with Shor's algorithm\")\n",
+    "        print(f\"     Timeline:\")\n",
     "        \n",
     "        key_size = remote_key.get_bits()\n",
     "        if key_size <= 1024:\n",
@@ -1526,19 +1526,19 @@
     "\n",
     "###  Attack Architecture:\n",
     "```\n",
-    "┌─────────────────┐\n",
-    "│ Jupyter Notebook│\n",
-    "│  (This notebook)│\n",
-    "└────────┬────────┘\n",
-    "         │ docker exec\n",
+    "\n",
+    " Jupyter Notebook\n",
+    "  (This notebook)\n",
+    "\n",
+    "          docker exec\n",
     "         ↓\n",
-    "┌─────────────────────┐      Capture TLS/SSH     ┌──────────────────┐\n",
-    "│ houdinis_framework  │─────────────────────────→│ houdinis_target  │\n",
-    "│ - Python scripts    │                           │ - SSH (RSA)      │\n",
-    "│ - Houdinis tools    │                           │ - HTTPS (TLS)    │\n",
-    "│ - Traffic analysis  │                           │ - Weak crypto    │\n",
-    "└─────────────────────┘                           └──────────────────┘\n",
-    "         │\n",
+    "      Capture TLS/SSH     \n",
+    " houdinis_framework  → houdinis_target  \n",
+    " - Python scripts                                - SSH (RSA)      \n",
+    " - Houdinis tools                                - HTTPS (TLS)    \n",
+    " - Traffic analysis                              - Weak crypto    \n",
+    "                           \n",
+    "         \n",
     "         ↓\n",
     "   Store for future\n",
     "   quantum decryption\n",
