--- a/notebooks/08-Houdinis_Advanced_Features.ipynb
+++ b/notebooks/08-Houdinis_Advanced_Features.ipynb
@@ -13,20 +13,20 @@
     "\n",
     "---\n",
     "\n",
-    "##  📚 Notebook Execution Order\n",
+    "##   Notebook Execution Order\n",
     "\n",
     "**This is Notebook #8 of 9**\n",
     "\n",
     "Recommended execution order:\n",
     "\n",
-    "1. **IBM_Quantum_Experience_Integration.ipynb** ✅\n",
-    "2. **Shors_Algorithm_RSA_Exploitation.ipynb** ✅\n",
-    "3. **Grovers_Algorithm_Symmetric_Key_Attacks.ipynb** ✅\n",
-    "4. **Quantum_Network_Scanning.ipynb** ✅\n",
-    "5. **Harvest_Now_Decrypt_Later_Attacks.ipynb** ✅\n",
-    "6. **Post_Quantum_Cryptography_Analysis.ipynb** ✅\n",
-    "7. **Quantum_Machine_Learning_Cryptanalysis.ipynb** ✅\n",
-    "8. ✅ **Houdinis_Advanced_Features.ipynb** ← YOU ARE HERE\n",
+    "1. **IBM_Quantum_Experience_Integration.ipynb** \n",
+    "2. **Shors_Algorithm_RSA_Exploitation.ipynb** \n",
+    "3. **Grovers_Algorithm_Symmetric_Key_Attacks.ipynb** \n",
+    "4. **Quantum_Network_Scanning.ipynb** \n",
+    "5. **Harvest_Now_Decrypt_Later_Attacks.ipynb** \n",
+    "6. **Post_Quantum_Cryptography_Analysis.ipynb** \n",
+    "7. **Quantum_Machine_Learning_Cryptanalysis.ipynb** \n",
+    "8.  **Houdinis_Advanced_Features.ipynb** ← YOU ARE HERE\n",
     "9. **Houdinis_Framework_Conclusion.ipynb**\n",
     "\n",
     "**Prerequisites:**\n",
@@ -604,7 +604,7 @@
     "        \n",
     "        # Quantum threat assessment\n",
     "        print(f\"\\\\n[!] QUANTUM VULNERABILITY ASSESSMENT:\")\n",
-    "        print(f\"    ─\" * 35)\n",
+    "        print(f\"    \" * 35)\n",
     "        \n",
     "        if key_size <= 1024:\n",
     "            threat_level = \"CRITICAL\"\n",
@@ -874,7 +874,7 @@
       "[*] Analyzing target SSH password authentication security...\n",
       "\n",
       "[*] GROVER'S ALGORITHM SECURITY REDUCTION:\n",
-      "    ─────────────────────────────────────────────────────────────────\n",
+      "    \n",
       "\n",
       "    4-digit PIN:\n",
       "      Original security: 4 bits (1.00e+04 combinations)\n",
@@ -932,23 +932,23 @@
       "\n",
       "[*] Simulating Grover-accelerated password cracking...\n",
       "    (Testing common weak passwords)\n",
-      "    [1/10] Testing 'admin'... ✗ (as expected)\n",
-      "    [2/10] Testing 'password'... ✗ (as expected)\n",
-      "    [3/10] Testing '123456'... ✗ (as expected)\n",
-      "    [4/10] Testing 'root'... ✗ (as expected)\n",
-      "    [5/10] Testing 'toor'... ✗ (as expected)\n",
-      "    [6/10] Testing 'test'... ✗ (as expected)\n",
-      "    [7/10] Testing 'user'... ✗ (as expected)\n",
-      "    [8/10] Testing 'guest'... ✗ (as expected)\n",
-      "    [9/10] Testing 'default'... ✗ (as expected)\n",
-      "    [10/10] Testing 'pass'... ✗ (as expected)\n",
+      "    [1/10] Testing 'admin'...  (as expected)\n",
+      "    [2/10] Testing 'password'...  (as expected)\n",
+      "    [3/10] Testing '123456'...  (as expected)\n",
+      "    [4/10] Testing 'root'...  (as expected)\n",
+      "    [5/10] Testing 'toor'...  (as expected)\n",
+      "    [6/10] Testing 'test'...  (as expected)\n",
+      "    [7/10] Testing 'user'...  (as expected)\n",
+      "    [8/10] Testing 'guest'...  (as expected)\n",
+      "    [9/10] Testing 'default'...  (as expected)\n",
+      "    [10/10] Testing 'pass'...  (as expected)\n",
       "\n",
       "[+] Target appears to use strong passwords (good!)\n",
       "    But remember: Grover's algorithm still reduces security by half\n",
       "\n",
       "\n",
       "[!] KEY SECURITY IMPLICATIONS:\n",
-      "    ─────────────────────────────────────────────────────────────────\n",
+      "    \n",
       "    • Grover's algorithm provides √N speedup for brute-force\n",
       "    • Effectively HALVES the security level of symmetric crypto\n",
       "    • AES-128 becomes equivalent to AES-64 (vulnerable!)\n",
@@ -987,7 +987,7 @@
       "[*] Analyzing target SSH password authentication security...\n",
       "\n",
       "[*] GROVER'S ALGORITHM SECURITY REDUCTION:\n",
-      "    ─────────────────────────────────────────────────────────────────\n",
+      "    \n",
       "\n",
       "    4-digit PIN:\n",
       "      Original security: 4 bits (1.00e+04 combinations)\n",
@@ -1045,23 +1045,23 @@
       "\n",
       "[*] Simulating Grover-accelerated password cracking...\n",
       "    (Testing common weak passwords)\n",
-      "    [1/10] Testing 'admin'... ✗ (as expected)\n",
-      "    [2/10] Testing 'password'... ✗ (as expected)\n",
-      "    [3/10] Testing '123456'... ✗ (as expected)\n",
-      "    [4/10] Testing 'root'... ✗ (as expected)\n",
-      "    [5/10] Testing 'toor'... ✗ (as expected)\n",
-      "    [6/10] Testing 'test'... ✗ (as expected)\n",
-      "    [7/10] Testing 'user'... ✗ (as expected)\n",
-      "    [8/10] Testing 'guest'... ✗ (as expected)\n",
-      "    [9/10] Testing 'default'... ✗ (as expected)\n",
-      "    [10/10] Testing 'pass'... ✗ (as expected)\n",
+      "    [1/10] Testing 'admin'...  (as expected)\n",
+      "    [2/10] Testing 'password'...  (as expected)\n",
+      "    [3/10] Testing '123456'...  (as expected)\n",
+      "    [4/10] Testing 'root'...  (as expected)\n",
+      "    [5/10] Testing 'toor'...  (as expected)\n",
+      "    [6/10] Testing 'test'...  (as expected)\n",
+      "    [7/10] Testing 'user'...  (as expected)\n",
+      "    [8/10] Testing 'guest'...  (as expected)\n",
+      "    [9/10] Testing 'default'...  (as expected)\n",
+      "    [10/10] Testing 'pass'...  (as expected)\n",
       "\n",
       "[+] Target appears to use strong passwords (good!)\n",
       "    But remember: Grover's algorithm still reduces security by half\n",
       "\n",
       "\n",
       "[!] KEY SECURITY IMPLICATIONS:\n",
-      "    ─────────────────────────────────────────────────────────────────\n",
+      "    \n",
       "    • Grover's algorithm provides √N speedup for brute-force\n",
       "    • Effectively HALVES the security level of symmetric crypto\n",
       "    • AES-128 becomes equivalent to AES-64 (vulnerable!)\n",
@@ -1133,7 +1133,7 @@
     "    return quantum_ops, speedup\n",
     "\n",
     "print(\"\\\\n[*] GROVER'S ALGORITHM SECURITY REDUCTION:\")\n",
-    "print(\"    \" + \"─\" * 65)\n",
+    "print(\"    \" + \"\" * 65)\n",
     "\n",
     "# Analyze different password complexities\n",
     "password_types = [\n",
@@ -1223,9 +1223,9 @@
     "            test_client.close()\n",
     "            break\n",
     "        except paramiko.AuthenticationException:\n",
-    "            print(\" ✗ (as expected)\")\n",
+    "            print(\"  (as expected)\")\n",
     "        except Exception as e:\n",
-    "            print(f\" ✗ ({type(e).__name__})\")\n",
+    "            print(f\"  ({type(e).__name__})\")\n",
     "        finally:\n",
     "            try:\n",
     "                test_client.close()\n",
@@ -1240,7 +1240,7 @@
     "    print(f\"[WARNING] SSH test failed: {e}\")\n",
     "\n",
     "print(\"\\\\n\\\\n[!] KEY SECURITY IMPLICATIONS:\")\n",
-    "print(\"    \" + \"─\" * 65)\n",
+    "print(\"    \" + \"\" * 65)\n",
     "print(\"    • Grover's algorithm provides √N speedup for brute-force\")\n",
     "print(\"    • Effectively HALVES the security level of symmetric crypto\")\n",
     "print(\"    • AES-128 becomes equivalent to AES-64 (vulnerable!)\")\n",
@@ -3293,41 +3293,41 @@
     "## Architecture\n",
     "\n",
     "```\n",
-    "┌─────────────────────────────────────────────────────────────────┐\n",
-    "│                     Jupyter Notebook                            │\n",
-    "│  • Runs attack orchestration cells                              │\n",
-    "│  • Visualizes results and analysis                              │\n",
-    "│  • Executes commands in Docker containers                       │\n",
-    "└────────────────────┬────────────────────────────────────────────┘\n",
-    "                     │\n",
-    "                     ▼\n",
-    "┌─────────────────────────────────────────────────────────────────┐\n",
-    "│               houdinis_network (isolated)                       │\n",
-    "│                                                                 │\n",
-    "│  ┌────────────────────────┐    ┌──────────────────────────┐   │\n",
-    "│  │  houdinis_framework    │───▶│    houdinis_target       │   │\n",
-    "│  │  (Attack Tools)        │    │  (Vulnerable Services)   │   │\n",
-    "│  │                        │    │                          │   │\n",
-    "│  │  • Qiskit              │    │  • SSH (RSA-2048)        │   │\n",
-    "│  │  • Shor's algorithm    │    │  • HTTPS/TLS 1.2         │   │\n",
-    "│  │  • Grover's algorithm  │    │  • Weak ciphers          │   │\n",
-    "│  │  • Paramiko            │    │  • Old protocols         │   │\n",
-    "│  │  • Cryptanalysis tools │    │  • Test credentials      │   │\n",
-    "│  └────────────────────────┘    └──────────────────────────┘   │\n",
-    "│                                                                 │\n",
-    "└─────────────────────────────────────────────────────────────────┘\n",
+    "\n",
+    "                     Jupyter Notebook                            \n",
+    "  • Runs attack orchestration cells                              \n",
+    "  • Visualizes results and analysis                              \n",
+    "  • Executes commands in Docker containers                       \n",
+    "\n",
+    "                     \n",
+    "                     \n",
+    "\n",
+    "               houdinis_network (isolated)                       \n",
+    "                                                                 \n",
+    "         \n",
+    "    houdinis_framework        houdinis_target          \n",
+    "    (Attack Tools)              (Vulnerable Services)      \n",
+    "                                                           \n",
+    "    • Qiskit                    • SSH (RSA-2048)           \n",
+    "    • Shor's algorithm          • HTTPS/TLS 1.2            \n",
+    "    • Grover's algorithm        • Weak ciphers             \n",
+    "    • Paramiko                  • Old protocols            \n",
+    "    • Cryptanalysis tools       • Test credentials         \n",
+    "         \n",
+    "                                                                 \n",
+    "\n",
     "```\n",
     "\n",
     "## How to Use This Notebook\n",
     "\n",
-    "### 1️⃣ **Start Docker Environment**\n",
+    "### 1⃣ **Start Docker Environment**\n",
     "```bash\n",
     "# From your terminal (not in notebook)\n",
     "cd /home/test/Downloads/github/portifolio/Houdinis\n",
     "docker-compose -f docker/docker-compose.yml up -d\n",
     "```\n",
     "\n",
-    "### 2️⃣ **Run Setup Cells**\n",
+    "### 2⃣ **Run Setup Cells**\n",
     "Execute these cells in order:\n",
     "- **Cell 2**: Docker Environment Configuration (markdown - just read)\n",
     "- **Cell 3**: Docker Container Connection Setup (verifies containers)\n",
@@ -3335,7 +3335,7 @@
     "- **Cell 5**: Environment Setup (initializes paths)\n",
     "- **Cell 6**: Quantum Backend Manager (via Docker)\n",
     "\n",
-    "### 3️⃣ **Execute Attack Demonstrations**\n",
+    "### 3⃣ **Execute Attack Demonstrations**\n",
     "\n",
     "#### **Shor's Algorithm Attack (Section 2)**\n",
     "- Run the **\"Real SSH RSA Key Attack\"** cell to:\n",
@@ -3359,7 +3359,7 @@
     "  - Post-quantum cryptography analysis\n",
     "  - HNDL campaign simulation\n",
     "\n",
-    "### 4️⃣ **View Results**\n",
+    "### 4⃣ **View Results**\n",
     "Each Docker-enabled attack cell will show:\n",
     "-  Connection status\n",
     "-  Target analysis results\n",
@@ -3367,7 +3367,7 @@
     "-  Timeline projections\n",
     "-  Mitigation recommendations\n",
     "\n",
-    "### 5️⃣ **Stop Environment**\n",
+    "### 5⃣ **Stop Environment**\n",
     "```bash\n",
     "# When done, stop containers\n",
     "docker-compose -f docker/docker-compose.yml down\n",
@@ -3380,19 +3380,19 @@
     "- **HTTPS Server**: TLS 1.2 with RSA certificates (port 443)\n",
     "- **HTTP Server**: Unencrypted traffic baseline (port 80)\n",
     "\n",
-    "### ⚡ Quantum Algorithms\n",
+    "###  Quantum Algorithms\n",
     "- **Shor's Algorithm**: Factors RSA keys exponentially faster\n",
     "- **Grover's Algorithm**: Searches symmetric keys √N faster\n",
     "- **Quantum ML**: Analyzes traffic patterns with quantum speedup\n",
     "\n",
-    "### 🔒 Security Analysis\n",
+    "###  Security Analysis\n",
     "- Vulnerability timeline projections\n",
     "- Threat level assessments (CRITICAL/HIGH/MODERATE/LOW)\n",
     "- Required qubit calculations\n",
     "- Classical vs Quantum time comparisons\n",
     "- Post-Quantum Cryptography (PQC) recommendations\n",
     "\n",
-    "### 📈 Educational Value\n",
+    "###  Educational Value\n",
     "- Visual demonstrations of quantum advantage\n",
     "- Real-world attack scenarios\n",
     "- Harvest Now Decrypt Later (HNDL) threat awareness\n",
